blocks/cards/cards.css
:root {
  --card-width-s: 1fr;
  --card-width-m: 50%;
  --card-width-l: 33.33%;
  --card-width-size: var(--card-width-s);
}

.cards-wrapper {
  background-color: transparent;
}

.cards.cta:not(.dark) {
  padding: 2rem;
  max-width: calc(var(--nav-width) - 6rem);
  margin: 0 auto;
}

.cards-container .cards-wrapper {
  margin-block-start: 5rem;
}

.cards > ul {
  list-style: none;
  margin: 0;
  padding: 0;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  grid-gap: 16px;
}

.cards.cta > ul {
  grid-gap: 0;
  grid-template-columns: repeat(auto-fill, var(--card-width-size));
}

.cards:not(.dark) > ul > li {
  border: 1px solid;
  background-color: var(--background-color);
}

.cards.cta > ul > li {
  transition: scale 300ms;
}

.cards.cta > ul > li > a {
  text-decoration: none;
  color: inherit;
  display: inline-block;
  height: 100%;
}

.cards.cta.dark > ul > li > a {
  display: flex;
  width: 100%;
  height: 100%;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  align-items: end;
}

/* Rule just for magazine listing page */
.block.cards.magazine li {
  border: none;
  border-top: 6px solid var(--primary-black);
  padding: 12px 0 0;
  width: 100%;
}

.block.cards.modest > ul > li {
  width: 270px;
  background: transparent;
  border: none;
}

.cards.cta:not(.dark) > ul > li:hover,
.cards.cta:not(.dark) > ul > li:focus {
  scale: 1.05;
  z-index: 1;
}

.cards .cards-card-body {
  margin: 16px;
}

.cards .cards-card-image {
  line-height: 0;
}

.cards.cta .cards-card-image {
  position: relative;
  line-height: initial;
  transition: background-color 300ms;
}

.cards.cta:not(.dark) > ul > li:hover .cards-card-image,
.cards.cta:not(.dark) > ul > li:focus .cards-card-image {
  background-color: rgb(216 216 216 / 40%);
}

.cards.dark .cards-card-body > p {
  font-weight: 400;
  line-height: 1.3em;
}

.cards.cta .cards-card-image p:has(picture) {
  width: 85%;
  margin: 0 auto;
  max-height: 300px;
  display: flex;
  align-items: flex-end;
  aspect-ratio: 1 / 1;
}

.cards.cta .cards-card-image picture {
  flex: 1 1 auto;
}

.cards.cta .cards-card-image .button-container {
  position: absolute;
  top: 1.5rem;
  right: 1.5rem;
  margin: 0;
}

.cta .cards-card-image .button {
  margin: 0;
  padding: 1rem 0.5rem;
  font-size: 75%;
}

.cards .cards-card-body > *:first-child {
  margin-top: 0;
}

.cards.cta .cards-card-body p:not(:has(.button)) {
  font-size: 80%;
}

.cards.cta:not(.dark) .cards-card-body .button-container {
  text-align: center;
}

.cards > ul > li img {
  width: 100%;
  aspect-ratio: 4 / 3;
  object-fit: cover;
}

.cards.cta > ul > li img {
  aspect-ratio: unset;
}

.cards.cta > ul > li img.scaled {
  aspect-ratio: 4 / 3;
  object-fit: contain;
  padding: 10px;
}

/* dark version */
.cards-container.dark-card-container {
  background-color: var(--primary-black);
  padding: 0;
}

.cards.dark > ul {
  color: var(--primary-white);
}

.cards.dark .cards-card-body {
  padding: 15px;
}

.cards.dark .cards-card-body > h3 {
  padding-right: 34px;
}

/* modest version */
.block.cards.modest {
  display: flex;
  justify-content: center;
  padding-top: 20px;
}

.block.cards.modest > ul {
  display: flex;
  gap: 50px;
  flex-wrap: wrap;
  justify-content: center;
}

.block.cards.modest .cards-card-body {
  margin: 16px 0;
  width: 100%;
}

/* MAGAZINE variation */
.block.cards.magazine ul {
  display: flex;
  flex-direction: column;
}

.block.cards.magazine .cards-card-body {
  font-size: var(--body-font-size-xs);
  margin: 0;
}

.block.cards.magazine .cards-card-body p {
  font-family: var(--subheadings-ff-medium);
  margin-bottom: 15px;
}

.block.cards.magazine .cards-card-body img {
  width: unset;
  margin: 0 0 10px;
}

.block.cards.magazine .cards-card-body p.button-container {
  margin: 0;
}

.block.cards.magazine .cards-card-body .button.primary {
  height: unset;
  padding: 0;
  margin: 0;
  border: none;
}

.block.cards.magazine .cards-card-body .button-container a {
  font-family: var(--subheadings-ff-medium);
  color: var(--primary-black);
  background-color: var(--primary-white);
  padding: 0;
  text-decoration: underline;
}

.block.cards.magazine .cards-card-body .button-container a:hover {
  color: var(--secondary-steel);
  transition: unset;
}

@media (min-width: 768px) {
  .block.cards.magazine > ul {
    max-width: 960px;
    margin: 0 auto;
    flex-direction: row;
    justify-content: space-between;
    grid-gap: 25px;
  }

  .block.cards.magazine .cards-card-body {
    font-size: var(--body-font-size-s);
  }

  .block.cards.magazine .cards-card-body p:last-of-type {
    margin-bottom: 65px;
  }
}

@media (min-width: 480px) {
  .cards.cta:not(.dark) {
    padding: 4rem 3rem;
  }

  .cards.cta > ul {
    --card-width-size: var(--card-width-s);
  }
}

/* media handling */
@media screen and (min-width: 640px) {
  .cards.cta.dark {
    padding: 4rem 3rem;
    max-width: calc(var(--nav-width) - 6rem);
    margin: 0 auto;
  }

  .cards.cta > ul {
    --card-width-size: var(--card-width-m);
  }

  .cards.dark .cards-card-body {
    padding: 0;
  }

  .cards.dark .cards-card-body > p {
    width: 80%;
    margin-bottom: 0;
  }

  .cards.dark > ul > li:hover,
  .cards.dark > ul > li:focus {
    box-shadow: 0 0 20px;
    scale: 1.05;
    z-index: 1;
  }
}

@media (min-width: 992px) {
  .cards.cta > ul {
    --card-width-size: var(--card-width-l);
  }

  .cards.cta.dark > ul > li {
    min-height: 450px;
  }
}

